--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ html {
 }
 body {
   line-height: 1.65;
-  font-family: 'Lora', serif;
+  font-family: 'europa', serif;
   height: 100%;
   width: 100%;
 }
