--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,7 +309,7 @@ div.header div.title ul.social li a {
 div.header div.title ul.social li a:hover {
   background-color: #1abc9c;
 }
-div.header div.bg-img {
+/*div.header div.bg-img {
   position: absolute;
   width: 100%;
   height: 100%;
