--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ div.header {
   margin-left: 0;
   padding: 0 2.12765957% 0 2.12765957%;
 }
-div.header div.gradient {
+/*div.header div.gradient {
   position: absolute;
   height: 50%;
   top: 50%;
@@ -265,7 +265,7 @@ div.header div.gradient {
   background: -ms-linear-gradient(bottom, #000000, transparent);
   background: -moz-linear-gradient(center bottom, #000000 0%, transparent 100%);
   background: -o-linear-gradient(transparent, #000000);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='#000000', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='#000000', GradientType=0);*/
 }
 div.header div.title {
   position: absolute;
@@ -309,7 +309,7 @@ div.header div.title ul.social li a {
 div.header div.title ul.social li a:hover {
   background-color: #1abc9c;
 }
-/*div.header div.bg-img {
+div.header div.bg-img {
   position: absolute;
   width: 100%;
   height: 100%;
