--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ div.header div.title ul.social li {
   list-style-type: none;
   display: inline-block;
 }
-div.header div.title ul.social li a {
+/*div.header div.title ul.social li a {
   display: inline-block;
   width: 25px;
   height: 21px;
@@ -307,7 +307,7 @@ div.header div.title ul.social li a {
   margin: 0 5px 0 5px;
 }
 div.header div.title ul.social li a:hover {
-  background-color: #1abc9c;
+  background-color: #1abc9c;*/
 }
 div.header div.bg-img {
   position: absolute;
