--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ div.header {
   margin-left: 0;
   padding: 0 2.12765957% 0 2.12765957%;
 }
-/*div.header div.gradient {
+div.header div.gradient {
   position: absolute;
   height: 50%;
   top: 50%;
@@ -265,7 +265,7 @@ div.header {
   background: -ms-linear-gradient(bottom, #000000, transparent);
   background: -moz-linear-gradient(center bottom, #000000 0%, transparent 100%);
   background: -o-linear-gradient(transparent, #000000);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='#000000', GradientType=0);*/
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='transparent', endColorstr='#000000', GradientType=0);
 }
 div.header div.title {
   position: absolute;
@@ -293,7 +293,7 @@ div.header div.title ul.social li {
   list-style-type: none;
   display: inline-block;
 }
-/*div.header div.title ul.social li a {
+div.header div.title ul.social li a {
   display: inline-block;
   width: 25px;
   height: 21px;
@@ -307,7 +307,7 @@ div.header div.title ul.social li {
   margin: 0 5px 0 5px;
 }
 div.header div.title ul.social li a:hover {
-  background-color: #1abc9c;*/
+  background-color: #1abc9c;
 }
 div.header div.bg-img {
   position: absolute;
@@ -367,7 +367,7 @@ div.header a.logo {
   border: 0px solid #ffffff;
   background-color: #000000;
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: 70px;
   text-align: center;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
