--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url(http://postach.io/static/themes/_assets/bootstrap/css/bootstrap.min.css);
 @import url(http://postach.io/static/themes/_assets/bootstrap/css/bootstrap-responsive.min.css);
-@import url(http://postach.io/static/themes/_assets/fontawesome/css/font-awesome.min.css);
+/*@import url(http://postach.io/static/themes/_assets/fontawesome/css/font-awesome.min.css);*/
 @import url(http://fonts.googleapis.com/css?family=europa);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700);
 /*---------------------------------------------------
