--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url(http://postach.io/static/themes/_assets/bootstrap/css/bootstrap.min.css);
 @import url(http://postach.io/static/themes/_assets/bootstrap/css/bootstrap-responsive.min.css);
-/*@import url(http://postach.io/static/themes/_assets/fontawesome/css/font-awesome.min.css);*/
+@import url(http://postach.io/static/themes/_assets/fontawesome/css/font-awesome.min.css);
 @import url(http://fonts.googleapis.com/css?family=europa);
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700);
 /*---------------------------------------------------
@@ -300,14 +300,14 @@ div.header div.title ul.social li a {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-color: #ffffff;
+  background-color: #000000;
   color: #000000;
   text-align: center;
   padding-top: 4px;
   margin: 0 5px 0 5px;
 }
 div.header div.title ul.social li a:hover {
-  background-color: #1abc9c;
+  background-color: #000000;
 }
 div.header div.bg-img {
   position: absolute;
